fixed white space between nav and bg picture on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,10 @@ h2 {
     html {
          background: image-url("food.jpg")  no-repeat center center fixed;
 			   background-size: cover;
+			margin-top: 0;
     }
+		.navbar {margin-bottom: 0;
+		}
     video {
         display: none;
     }
